--- a/index.html
+++ b/index.html
@@ -2,14 +2,92 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gamecity Electronics</title>
-    <meta property="og:image" content="/og-image.png" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=5.0"
+    />
+    <meta name="theme-color" content="#1a1a1a" />
+    <meta
+      name="robots"
+      content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"
+    />
+
+    <!-- Primary Meta Tags -->
+    <title>
+      Gaming PCs, PS5, Xbox & Graphics Cards in Nairobi | GameCity Electronics
+    </title>
+    <meta
+      name="title"
+      content="Gaming PCs, PS5, Xbox & Graphics Cards in Nairobi | GameCity Electronics"
+    />
+    <meta
+      name="description"
+      content="Shop gaming PCs, PlayStation 5, Xbox Series X, graphics cards & gaming accessories in Nairobi. Fast delivery across Kenya. Best prices guaranteed!"
+    />
+    <meta
+      name="keywords"
+      content="gaming PCs Nairobi, PlayStation 5 Kenya, Xbox Series X, graphics cards, gaming accessories, RTX 4070, RTX 4080, gaming monitors, Nairobi electronics"
+    />
+    <meta name="author" content="GameCity Electronics" />
+    <meta name="geo.region" content="KE-110" />
+    <meta name="geo.placename" content="Nairobi" />
+    <meta name="geo.position" content="-1.2921;36.8219" />
+    <meta name="ICBM" content="-1.2921, 36.8219" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://gamecityelectronics.com/" />
+    <meta
+      property="og:title"
+      content="Gaming PCs, PS5, Xbox & Graphics Cards in Nairobi | GameCity Electronics"
+    />
+    <meta
+      property="og:description"
+      content="Shop gaming PCs, PlayStation 5, Xbox Series X, graphics cards & gaming accessories in Nairobi. Fast delivery across Kenya. Best prices guaranteed!"
+    />
+    <meta
+      property="og:image"
+      content="https://gamecityelectronics.com/og-image.png"
+    />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:site_name" content="GameCity Electronics" />
+    <meta property="og:locale" content="en_KE" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://gamecityelectronics.com/" />
+    <meta
+      property="twitter:title"
+      content="Gaming PCs, PS5, Xbox & Graphics Cards in Nairobi | GameCity Electronics"
+    />
+    <meta
+      property="twitter:description"
+      content="Shop gaming PCs, PlayStation 5, Xbox Series X, graphics cards & gaming accessories in Nairobi. Fast delivery across Kenya. Best prices guaranteed!"
+    />
+    <meta
+      property="twitter:image"
+      content="https://gamecityelectronics.com/og-image.png"
+    />
+
+    <!-- Favicon and Icons -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="manifest" href="/site.webmanifest" />
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+
+    <!-- Preconnect to external domains -->
+    <link rel="preconnect" href="https://res.cloudinary.com" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="dns-prefetch" href="https://res.cloudinary.com" />
+
+    <!-- Security Headers -->
+    <meta http-equiv="X-Content-Type-Options" content="nosniff" />
+    <meta http-equiv="X-Frame-Options" content="DENY" />
+    <meta http-equiv="X-XSS-Protection" content="1; mode=block" />
+
+    <!-- Canonical URL will be set dynamically by React Helmet -->
   </head>
 
   <body>
