--- a/index.html
+++ b/index.html
@@ -82,6 +82,48 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="dns-prefetch" href="https://res.cloudinary.com" />
 
+    <!-- Resource hints for performance -->
+    <link rel="preload" href="/gamecity.png" as="image" type="image/png" />
+    <link
+      rel="preload"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript
+      ><link
+        rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
+    /></noscript>
+
+    <!-- Critical CSS for above-the-fold content -->
+    <style>
+      /* Critical styles for hero section */
+      .hero-gradient {
+        background: linear-gradient(
+          135deg,
+          #1f2937 0%,
+          #111827 50%,
+          #000000 100%
+        );
+      }
+      .hero-overlay {
+        background: linear-gradient(
+          to bottom,
+          rgba(0, 0, 0, 0.5) 0%,
+          rgba(0, 0, 0, 0.8) 50%,
+          #0a0a0a 100%
+        );
+      }
+      /* Prevent layout shift */
+      .aspect-square {
+        aspect-ratio: 1 / 1;
+      }
+      .aspect-video {
+        aspect-ratio: 16 / 9;
+      }
+    </style>
+
     <!-- Security Headers -->
     <meta http-equiv="X-Content-Type-Options" content="nosniff" />
     <meta http-equiv="X-Frame-Options" content="DENY" />
