google-site meta

--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-KE">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="google-site-verification"
+      content="82CEeFzqbWYFGH4w4-FxIPXvUIoPhzdNg_PoGA9535M"
+    />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=5.0"
