--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://gamecityelectronics.com/" />
+    <meta property="og:url" content="https://www.gamecityelectronics.co.ke/" />
     <meta
       property="og:title"
       content="Gaming PCs, PS5, Xbox & Graphics Cards in Nairobi | GameCity Electronics"
@@ -51,7 +51,7 @@
     />
     <meta
       property="og:image"
-      content="https://gamecityelectronics.com/og-image.png"
+      content="https://www.gamecityelectronics.co.ke/og-image.png"
     />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -60,7 +60,10 @@
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://gamecityelectronics.com/" />
+    <meta
+      property="twitter:url"
+      content="https://www.gamecityelectronics.co.ke/"
+    />
     <meta
       property="twitter:title"
       content="Gaming PCs, PS5, Xbox & Graphics Cards in Nairobi | GameCity Electronics"
@@ -71,7 +74,7 @@
     />
     <meta
       property="twitter:image"
-      content="https://gamecityelectronics.com/og-image.png"
+      content="https://www.gamecityelectronics.co.ke/og-image.png"
     />
 
     <!-- Favicon and Icons -->
