feat(seo): update homepage title across SEO and base meta tags

--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
 
     <!-- Primary Meta Tags -->
     <title>
-      Gaming PCs, PS5, Xbox & Graphics Cards in Nairobi | GameCity Electronics
+      Custom-Built PCs for Gaming & Streaming, Graphics Design, Architectural
+      Design and Machine learning | GameCity Electronics
     </title>
     <meta
       name="title"
-      content="Gaming PCs, PS5, Xbox & Graphics Cards in Nairobi | GameCity Electronics"
+      content="Custom-Built PCs for Gaming & Streaming, Graphics Design, Architectural Design and Machine learning | GameCity Electronics"
     />
     <meta
       name="description"
@@ -43,7 +44,7 @@
     <meta property="og:url" content="https://www.gamecityelectronics.co.ke/" />
     <meta
       property="og:title"
-      content="Gaming PCs, PS5, Xbox & Graphics Cards in Nairobi | GameCity Electronics"
+      content="Custom-Built PCs for Gaming & Streaming, Graphics Design, Architectural Design and Machine learning | GameCity Electronics"
     />
     <meta
       property="og:description"
@@ -66,7 +67,7 @@
     />
     <meta
       property="twitter:title"
-      content="Gaming PCs, PS5, Xbox & Graphics Cards in Nairobi | GameCity Electronics"
+      content="Custom-Built PCs for Gaming & Streaming, Graphics Design, Architectural Design and Machine learning | GameCity Electronics"
     />
     <meta
       property="twitter:description"
