--- a/index.html
+++ b/index.html
@@ -92,6 +92,8 @@
 
     <!-- Resource hints for performance -->
     <link rel="preload" href="/gamecity.png" as="image" type="image/png" />
+    <link rel="preconnect" href="https://res.cloudinary.com" crossorigin />
+    <link rel="dns-prefetch" href="https://res.cloudinary.com" />
     <link
       rel="preload"
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
